# metabolite-calculate

./: .gitignore  CMakeLists.txt  Readme.md
ansible/: ansible-playbook.sh  collect.sh  cut_columns.sh  home.sh  hosts  master  path.sh  run_calculation.sh  settings.sh  slaves  spark.retry  spark.yml
calculation/: CMakeLists.txt
calculation/cmake/Modules/: FindGUROBI.cmake
calculation/src/boost_extract/: CMakeLists.txt
calculation/src/glpk/: CMakeLists.txt  server_err_logs.txt
calculation/src/glpk/bflib/: CMakeLists.txt
calculation/src/glpk/colamd/: CMakeLists.txt
calculation/src/glpk/env/: CMakeLists.txt
calculation/src/glpk/proxy/: CMakeLists.txt
calculation/src/glpk/simplex/: spydual.c
calculation/src/glpk/zlib/: CMakeLists.txt
calculation/src/gurobi_interface/: CMakeLists.txt
calculation/src/gurobi_interface/src/cpp/: Exception.h
calculation/src/lib/: CMakeLists.txt  GurobiSolverFacade.cpp  GurobiSolverFacade.h  LPSolverAbstract.h  LPSolverFacade.cpp  LPSolverFacade.h  Metabolism.cpp  Metabolism.hpp  utils.hpp
calculation/src/main/: coverage.cpp  main.cpp
data/: HepatocyteQSSPN.qsspn  test.txt  test2.txt
data-simple/: Bile.qsspn
distribute/: distribute.sbt
distribute/src/main/scala/: Distribution.scala  Grouping.scala  distribution.scala
neural_network/: neural_network.py
scripts/: Readme.md  build.sh  clean_slaves.sh  copy.sh  copy_build.sh  download.sh  filter_slaves.sh  install.sh  keys.sh  master  path.sh  settings.sh  slaves  ssh_up.ex  ssh_up.sh  start.sh  stop.sh  sync.sh
src/glpk/: CMakeLists.txt
src/glpk/amd/: CMakeLists.txt
src/glpk/api/: CMakeLists.txt
src/glpk/cglib/: CMakeLists.txt
src/glpk/minisat/: CMakeLists.txt
src/glpk/misc/: CMakeLists.txt
src/glpk/mpl/: CMakeLists.txt
src/glpk/simplex/: CMakeLists.txt
src/lib/: CMakeLists.txt  LPSolverFacade.h  Metabolism.cpp
src/main/: main.cpp
